# ic-sqlite-chat

./: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/backend/src/modules/change/: change.rs  controller.rs  mod.rs  state.rs  types.rs
src/backend/src/modules/chat/: chat.rs  controller.rs  mod.rs  state.rs  types.rs
src/backend/src/modules/db/: controller.rs  mod.rs
src/frontend/: index.html  package.json  vite.config.js
src/frontend/public/: .ic-assets.json5
src/frontend/src/: App.tsx  index.scss  sqlite.d.ts
src/frontend/src/change/: change.db.ts  change.types.ts
src/frontend/src/change/utils/: parseChangesResponse.ts
src/frontend/src/chat/hooks/: useCreateMessage.tsx
src/frontend/src/components/: Footer.tsx  Loader.tsx
src/frontend/src/database/: DatabaseProvider.tsx  handleChanges.ts
src/frontend/src/database/utils/: openDatabase.ts
src/sql-test-backend/: Cargo.toml  build.rs
src/sql-test-backend/src/modules/: mod.rs
src/sql-test-backend/src/modules/change/: controller.rs
src/sql-test-backend/src/modules/chat/: controller.rs  mod.rs
src/sql-test-backend/src/modules/db/: controller.rs  db.rs
src/sql-test-frontend/: index.html  package.json  vite.config.js
src/sql-test-frontend/src/: App.jsx  App.tsx  index.scss  main.tsx
src/sql-test-frontend/src/chat/: chat.db.ts  chat.types.ts
src/sql-test-frontend/src/components/: Chat.tsx
src/sql-test-frontend/src/database/: DatabaseProvider.tsx  handleChanges.ts
(+6 files in other folders)
