[package]
name = "backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
hex = "0.4.3"
ic-cdk = "0.13"
ic-stable-structures = "0.6.5"
ic-wasi-polyfill = "0.4.3"
rusqlite = { version = "0.31.0", features = ["wasm32-wasi-vfs", "bundled"] }
serde = "1.0.203"
serde_json = "1.0.117"
